force-app/main/default/objects/ReferenceSales__c/ReferenceSales__c.object-meta.xml
<CustomObject>
    <label>Ventas Referenciales</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Ventas Referenciales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ventas Referenciales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>