force-app/main/default/objects/ReferenceSales__c/fields/Obra__c.field-meta.xml
<CustomField>
    <fullName>Obra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra</label>
    <referenceTo>Obra__c</referenceTo>
    <relationshipLabel>Ventas Referenciales</relationshipLabel>
    <relationshipName>Ventas_Referenciales</relationshipName>
    <type>Lookup</type>
</CustomField>