force-app/main/default/objects/ReferenceSales__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Producto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Company__c</field>
            <operation>equals</operation>
            <valueField>Product2.compania__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ventas Referenciales Producto</relationshipLabel>
    <relationshipName>Ventas_Referenciales_Producto</relationshipName>
    <type>Lookup</type>
</CustomField>